--- a/pom.xml
+++ b/pom.xml
@@ -72,11 +72,11 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.uwetrottmann.tmdb2</groupId>
             <artifactId>tmdb-java</artifactId>
